--- a/RoboOtrs.ipynb
+++ b/RoboOtrs.ipynb
@@ -29,7 +29,7 @@
     "    global cursorMySql\n",
     "    \n",
     "    try:\n",
-    "        con = mysql.connector.connect(host='192.168.2.132', database='otrs', port=3306, user='painel_otrs_apl',password='painel_otrs_apl_1234', buffered=True)\n",
+    "        con = mysql.connector.connect(host='', database='', port=3306, user='',password='', buffered=True)\n",
     "    except mysql.connector.Error as err:\n",
     "        print(\"Sem VPN...: {}\".format(err))\n",
     "        input(\"Pressione Qualquer Tecla Pra Continuar\")\n",
